<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_nome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Primeiro nome"
        android:inputType="textPersonName"
        android:text="@string/txt_primeiro_nome"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txt_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Sobrenome"
        android:inputType="textPersonName"
        android:text="@string/txt_sobrenome"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/txt_curso"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Curso desejado"
        android:ems="10"
        android:hint="Digite o curso desejado"
        android:inputType="textPersonName"
        android:text="@string/txt_curso_desejado"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/txt_contato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Telefone de contato"
        android:inputType="textPersonName"
        android:text="@string/contato"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="-26dp" />


    <TextView
        android:id="@+id/txt_lista_spinner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/purple_200"
        android:padding="4dp"
        android:text="@string/subtitle_select_course"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="225dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/corBotoes"
            android:text="@string/btn_limpar" />

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/corBotoes"
            android:text="@string/btn_salvar" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btn_finalizar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_criar_curso"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="Criar curso" />


</androidx.appcompat.widget.LinearLayoutCompat>