<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/txt_nome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Primeiro nome"
        android:inputType="textPersonName"
        android:text="@string/txt_primeiro_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txt_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Sobrenome"
        android:inputType="textPersonName"
        android:text="@string/txt_sobrenome"
        app:layout_constraintTop_toBottomOf="@+id/txt_nome"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/txt_curso"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="Curso desejado"
        android:ems="10"
        android:hint="Digite o curso desejado"
        android:inputType="textPersonName"
        android:text="@string/txt_curso_desejado"
        app:layout_constraintTop_toBottomOf="@+id/txt_sobrenome"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="-16dp" />

    <EditText
        android:id="@+id/txt_contato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Telefone de contato"
        android:inputType="textPersonName"
        android:text="@string/contato"
        app:layout_constraintTop_toBottomOf="@+id/txt_curso"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="-26dp" />


    <TextView
        android:id="@+id/txt_lista_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Selecione um curso"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contato" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txt_contato"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/corBotoes"
        android:text="@string/btn_limpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btn_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/corBotoes"
        android:text="@string/btn_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btn_finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_salvar" />


</androidx.constraintlayout.widget.ConstraintLayout>